@@ -6,7 +6,7 @@ DIST audacious-1.5.0.tgz 1946403 RMD160 bc1fff2471ee1f8e7ed84f4aed060b572409853f
 DIST audacious-1.5.1.tgz 1937747 RMD160 69cbd30ffde339ea0549c631766a5b866cf32c29 SHA1 3c3cb3a4f9997f5ab3a6b4937260b2899c844806 SHA256 ac5970c09ed25ac56dac15e035328592cace5321c7895229e682cac92201f1d7
 DIST gentoo_ice-xmms-0.2.tar.bz2 51839 RMD160 11439cbebf8c6dc5745c8593a79e88303d094544 SHA1 e97ebbf204e0d1b150265f9e67f0ed54d779e110 SHA256 d1be63368b76f4a8b1d5b0e955cd7a77177f56a7f0b828c6603d8fd2836422b1
 EBUILD audacious-1.5.0.ebuild 2060 RMD160 4c75c434b4df77c870de74f5a51497d30924d399 SHA1 3a5b4bffd0bafa186b2653fa2b2ee06808a879f4 SHA256 d79be730fe3b428fd68eee2a6e344930e55514cbc09f05ebc20f59d35fb8a29f
-EBUILD audacious-1.5.1-r1.ebuild 2307 RMD160 00106619f5ed0b48bcc43fa8b8307be36780b00c SHA1 7baeab52cb96c62051c828844610847132bb41ed SHA256 1d81a57086bb0ba07df7e1fd35399b9b9d303b4bd191091136104bcda91a7082
+EBUILD audacious-1.5.1-r1.ebuild 2278 RMD160 beccd80562261dfab03d97d68757de899c0df4d7 SHA1 efb33c0f42e11fb24bc822eb24d3651782bbfb7d SHA256 9b7b241251420e9f6be85dc82ef5d90076d575c351f933d868dbca1d8b6b5834
 EBUILD audacious-1.5.1.ebuild 2190 RMD160 6443364d1689f404e4278dbe0521e9d9d9d3641e SHA1 1e810fd08140a0cf578bc6b39e8c116de0633d58 SHA256 7a1122c1391432ade8e6c7de6ab39a2fbeae1dac2d26ddec213c263dc6fc91a0
-MISC ChangeLog 26677 RMD160 731e8b9115789b713ecb37f8c2b232c69af0a747 SHA1 8bd75d8d3b0a026f5b963e759e72b60b700cef4c SHA256 3deea8a0ab303177789c5d283d2c000a259a3fbd398d0cdc3fdb816f168af23f
+MISC ChangeLog 26850 RMD160 9940dd09cc6a361bb98f1b777e2537e966b40fe6 SHA1 761bb873f7d804803b3d9cd5872d3b1914fda305 SHA256 ba0c0c2ccc9ad4a13c4e96d1978cc800c8173aacccef504d06a74af2962ed607
 MISC metadata.xml 363 RMD160 fba132fb7596814a0d7e42330a5703dc4afa32dc SHA1 2a77afacfd9e5628bd59bfc6332320302d3a6387 SHA256 cc833502f2ab5b13e4b22684d0f7bec07804c3aa2daccaee913297853e6e5b07
